# Scraping

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
docs/: acceptance.md  legacy_migration.md  runbook.md
qa/: data_quality_checks.sql  duplicate_detection.sql
scripts/: setup_mysql.bat  setup_mysql.sh  setup_mysql.sql
src/: __init__.py  cli.py
src/cricket_database/: __init__.py  config.py  database.py
src/cricket_database/cli/: __init__.py  main.py
src/cricket_database/etl/: __init__.py  config.py  load.py  loaders.py  migrate_legacy.py  models.py  parse_load.py  parse_scorecard.py  pipeline.py  quality_checks.py  raw_fetch.py  reconcile.py  transform.py  transformers.py  upsert_scorecard.py
src/cricket_database/models/: __init__.py  ball_by_ball.py  base.py  innings.py  matches.py  player_stats.py  players.py  teams.py
src/cricket_database/qa/: __init__.py  runner.py
src/cricket_database/schemas/: __init__.py  ball_by_ball.py  innings.py  matches.py  player_stats.py  players.py  teams.py
src/cricket_database/scrapers/: __init__.py  base.py  cricket_api_scraper.py  espn_scraper.py
src/cricket_database/utils/: explain_queries.py  migrate_sql.py
src/etl/: cli.py  metrics_server.py
